--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
     - os: osx
       compiler: clang
       osx_image: xcode8
-      env: BUILD_TYPE=Release COMPILER="clang"
+      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="clang"
     - os: osx
       compiler: clang
       osx_image: xcode8
