cmake: make use of project level cmakelists

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -188,34 +188,20 @@ set(COVERALLS_SRC "")
 # add all other projects
 #
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/input_models)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dia/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dia/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/quilt/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/quilt/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn.json/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn.json/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn.dia/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn.dia/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/options/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/options/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/quilt.cpp/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/quilt.cpp/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/formatters/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/formatters/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utility/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utility/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/knit/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/knit/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/knitter/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/knitter/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/annotations/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/annotations/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitch/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitch/tests)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitcher/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitcher/tests)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dia)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/quilt)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn.json)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn.dia)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/options)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/quilt.cpp)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/formatters)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utility)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/knit)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/knitter)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/annotations)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitch)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitcher)
 
 if(WITH_COVERALLS)
     set(COVERAGE_SRCS "${COVERALLS_SRC}")
