--- a/projects/input_models/CMakeLists.txt
+++ b/projects/input_models/CMakeLists.txt
@@ -247,3 +247,21 @@ if(use_latest_knitter)
     add_dependencies(knit_${target} knitter)
 endif()
 add_dependencies(knit_all knit_${target})
+
+set(target wale)
+add_custom_target(knit_${target}
+    COMMENT "Knitting Stitch model" VERBATIM
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${knitter_binary}
+    --target ${models_dir}/${target}.dia,dogen
+    --reference ${models_dir}/annotations.dia,dogen
+    --cpp-project-dir ${projects_dir}/
+    --ignore-files-matching-regex .*/CMakeLists.txt
+    --ignore-files-matching-regex .*/tests/.*
+    --ignore-files-matching-regex .*/test/.*
+    --verbose
+    --delete-extra-files)
+if(use_latest_knitter)
+    add_dependencies(knit_${target} knitter)
+endif()
+add_dependencies(knit_all knit_${target})
