--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -180,6 +180,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/projects/annotations/include
     ${CMAKE_SOURCE_DIR}/projects/stitch/include
     ${CMAKE_SOURCE_DIR}/projects/stitcher/include
+    ${CMAKE_SOURCE_DIR}/projects/wale/include
     )
 
 set(COVERALLS_SRC "")
@@ -202,6 +203,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/knitter)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/annotations)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitch)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitcher)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/wale)
 
 if(WITH_COVERALLS)
     set(COVERAGE_SRCS "${COVERALLS_SRC}")
