major rework of the knit-stitch-wale integration
- do not use annotations in wale, move meta-data to stitch instead.
- supply annotation groups factory at the highest level
- first stab at implementing stitch formatter with wale support

--- a/projects/quilt.cpp/src/CMakeLists.txt
+++ b/projects/quilt.cpp/src/CMakeLists.txt
@@ -31,6 +31,7 @@ target_link_libraries(${name}
     yarn
     quilt
     wale
+    stitch
     ${Boost_LIBRARIES})
 
 set_target_properties(${name} PROPERTIES OUTPUT_NAME ${binary_name})
