add initial support for yarn.json test data sets

--- a/test_data/CMakeLists.txt
+++ b/test_data/CMakeLists.txt
@@ -1,4 +1,4 @@
-# -*- mode: cmake; tab-width: 4; indent-tabs-mode: nil -*-
+# -*- mode: cmake; cmake-tab-width: 4; indent-tabs-mode: nil -*-
 #
 # Copyright (C) 2012-2015 Marco Craveiro <marco.craveiro@gmail.com>
 #
@@ -56,6 +56,27 @@ foreach(dir ${sub_dir})
         endif()
     endif()
 endforeach()
+
+if (WITH_JSON_VALIDATION)
+    set(files "")
+
+    set(folder "yarn.json/input")
+    file(GLOB_RECURSE files RELATIVE
+        "${CMAKE_CURRENT_SOURCE_DIR}/${folder}"
+        "${CMAKE_CURRENT_SOURCE_DIR}/${folder}/*.json")
+
+    set(target "yarn.json")
+    add_custom_target(validate_json_${target})
+    add_dependencies(validate_all_json validate_json_${target})
+    foreach(file ${files})
+        add_custom_target(validate_json_${target}_${file}
+            COMMENT "Validating JSON for ${target}/${file}."
+            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+            COMMAND ${JQ_COMMAND} . ${folder}/${file} > /dev/null)
+        add_dependencies(validate_json_${target}
+            validate_json_${target}_${file})
+    endforeach()
+endif()
 
 # sample files for installation
 file(GLOB samples "${CMAKE_CURRENT_SOURCE_DIR}/yarn.dia/input/*.dia")
