cmake: add a target to indent json using jq

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,6 +168,7 @@ find_program(JQ_COMMAND NAMES jq)
 if(JQ_COMMAND)
     message(STATUS "Found jq (${JQ_COMMAND})...")
     add_custom_target(validate_all_json)
+    add_custom_target(indent_all_json)
 else()
     message(STATUS "jq not found, disabling JSON validation.")
     set(WITH_JSON_VALIDATION "off")
