tailor: add support for objects

--- a/projects/yarn.json/src/CMakeLists.txt
+++ b/projects/yarn.json/src/CMakeLists.txt
@@ -31,6 +31,7 @@ set_target_properties(${name}
 
 target_link_libraries(${name}
     utility
+    formatters
     annotations
     yarn
     ${LIBXML2_LIBRARIES}
