quilt.csharp: hook in the sub-kernel to initialisation

--- a/projects/knit/src/CMakeLists.txt
+++ b/projects/knit/src/CMakeLists.txt
@@ -39,6 +39,7 @@ target_link_libraries(${name}
     yarn.json
     quilt
     quilt.cpp
+    quilt.csharp
     ${LIBXML2_LIBRARIES}
     ${Boost_LIBRARIES})
 
